hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      serviceAccountName: hello-app
      containers:
        - name: hello-app
          image: hello-db-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: demo
spec:
  selector:
    app: hello-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
